# telegram-bot-torrents

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.ci  Procfile  README.md  heroku.yml
.github/workflows/: dockerhubpush.yml  release.yml
src/: flexget.rs  imdb.rs  jackett.rs  main.rs  telegram.rs  transmission.rs
