[package]
name = "telegram-bot-torrents"
version = "0.3.2"
authors = ["Guilherme Henrique <gjhenrique@gmail.com>"]
edition = "2018"

[dependencies]
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot", default-features = false, features = ["rustls"] }

futures = "0.3"
tokio = { version = "1.6", features = ["full"]}
hyper = { version = "0.14", features = ["client", "http1", "http2"] }
hyper-rustls = "0.22"
serde_json = "1.0"
serde = "1.0"
url = "2.2.0"
size_format = "1.0"
base64 = "0.13"
