[package]
name = "telegram-bot-torrents"
version = "0.4.2"
authors = ["Guilherme Henrique <gjhenrique@gmail.com>"]
edition = "2018"

[dependencies]
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot", default-features = false, features = ["rustls"] }

base64 = "0.13"
futures = "0.3"
hyper = { version = "0.14", features = ["client", "http1", "http2"] }
hyper-rustls = "0.22"
serde = "1.0"
serde_json = "1.0"
size_format = "1.0"
tokio = { version = "1.15", features = ["full"]}
tracing = "0.1.32"
tracing-subscriber = "0.2.0"
url = "2.2.2"
